[gd_scene load_steps=7 format=3 uid="uid://bifiob62aodmk"]

[ext_resource type="Shader" path="res://scripts/shaders/sangre.gdshader" id="1_4ylk4"]
[ext_resource type="Script" path="res://scripts/canvas_puzzle_estanteria.gd" id="1_06mmp"]
[ext_resource type="Texture2D" uid="uid://dpgfyd6v8ifd0" path="res://assets/materials/white-background.png" id="2_bfdec"]
[ext_resource type="Texture2D" uid="uid://dio3acuttcete" path="res://assets/assets/Inside_C.png" id="3_xo6g8"]
[ext_resource type="Texture2D" uid="uid://bo5oocg3ulo6y" path="res://icon.svg" id="4_enplm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bphmv"]
shader = ExtResource("1_4ylk4")
shader_parameter/blood_color = null
shader_parameter/blood_intensity = 0.5
shader_parameter/internal_limit = 0.3
shader_parameter/external_limit = 0.6

[node name="CanvasPuzzleEstanteria" type="CanvasLayer"]
script = ExtResource("1_06mmp")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_bphmv")
position = Vector2(478, 270.5)
scale = Vector2(1.2025, 0.908333)
texture = ExtResource("2_bfdec")

[node name="estanteria" type="Sprite2D" parent="."]
position = Vector2(473, 334)
scale = Vector2(12.3906, 10.3958)
texture = ExtResource("3_xo6g8")
region_enabled = true
region_rect = Rect2(688, 144, 64, 48)

[node name="Button" type="Button" parent="."]
offset_left = 274.0
offset_top = 84.0
offset_right = 376.0
offset_bottom = 207.0

[node name="Sprite2D" type="Sprite2D" parent="Button"]
position = Vector2(50.5, 60.5)
scale = Vector2(0.789063, 0.960938)
texture = ExtResource("4_enplm")

[node name="Button2" type="Button" parent="."]
offset_left = 444.0
offset_top = 78.0
offset_right = 546.0
offset_bottom = 201.0

[node name="Sprite2D" type="Sprite2D" parent="Button2"]
position = Vector2(50.5, 60.5)
scale = Vector2(0.789063, 0.960938)
texture = ExtResource("4_enplm")

[node name="Button3" type="Button" parent="."]
offset_left = 699.0
offset_top = 77.0
offset_right = 801.0
offset_bottom = 200.0

[node name="Sprite2D" type="Sprite2D" parent="Button3"]
position = Vector2(50.5, 60.5)
scale = Vector2(0.789063, 0.960938)
texture = ExtResource("4_enplm")

[node name="Button4" type="Button" parent="."]
offset_left = 775.0
offset_top = 78.0
offset_right = 877.0
offset_bottom = 201.0
scale = Vector2(0.24, 0.279999)

[node name="Sprite2D" type="Sprite2D" parent="Button4"]
position = Vector2(50.5, 60.5)
scale = Vector2(0.789063, 0.960938)
texture = ExtResource("4_enplm")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
