extends CanvasLayer




func _on_button_pressed() -> void:
	
	print("Boton: DialogoManager.funcioncorrespondiente")
	
	


func _on_button_2_pressed() -> void:


	print("Boton 2: DialogoManager.funcioncorrespondiente")




func _on_button_3_pressed() -> void:
	
	

	print("Boton 3: DialogoManager.funcioncorrespondiente")


func _on_button_4_pressed() -> void:
	
	
	print("Boton 4: DialogoManager.funcioncorrespondiente")
